muter (0.5.0-1) UNRELEASED; urgency=medium

  * Initial Debian package release.
  * Bump minimum Rust version to 1.34.2.
  * Implement the Yubico modhex encoding as the encoder "modhex".
  * Add the option "bare" to the ascii85 encoder.

 -- brian m. carlson <sandals@crustytoothpaste.net>  Sun, 06 Dec 2020 00:00:00 -0000